# nexus-ai

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  LICENSE  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  index.html
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._tree.txt
agent-demo/: __next._full.txt  __next._tree.txt  index.html
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/agent/: engine.py  models.py
backend/app/api/routers/: __init__.py  confidence.py  decision.py  performance.py  reviewer.py  test.py
backend/app/core/: config.py  di.py  exceptions.py  logging.py
backend/app/models/: entities.py  schemas.py
backend/app/routers/: agent.py  execute.py  generate.py  repair.py  status.py  test.py
backend/app/schemas/: confidence.py  decision.py  performance.py  reviewer.py  security.py  test.py
backend/app/services/: __init__.py  base_tool.py  code_reviewer.py  confidence_engine.py  decision_engine.py  healing_service.py  huggingface_service.py  local_fallback.py  openai_service.py  orchestrator.py  performance_analyzer.py  reflection_engine.py  sandbox_service.py  security_scanner.py  tester.py
backend/tests/: test_api.py
dashboard/: __next._index.txt  __next._tree.txt  index.html  index.txt
docs/: API.md  ARCHITECTURE.md  BEST_PRACTICES.md  DEPLOYMENT.md  INDEX.md  INSTALLATION.md  SCHEMAS.md  SERVICES.md  TROUBLESHOOTING.md  USAGE.md
(+81 files in other folders)
